[project]
name = "chatd"
version = "0.1.0"
description = "Terminal ChatGPT website clone"
authors = [{name = "Amin Rostami", email = "somthing4die@gmail.com"}]
dependencies = [
  "textual>=0.58.0",
  "openai>=1.14.0",
  "rich>=13.7.0",
  "uuid",
  "python-dotenv",
]

[project.scripts]
chatd = "chatd.main:main"

[tool.uv.workspace]
members = [
    "test",
    "src",
]
